--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,18 +1,21 @@
-<div class="card transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 overflow-auto">
-    <a [routerLink]="['components/hola', characters().id]">
+<div class="flex">
+  <div class="flex-1">
+
+    <a [routerLink]="['show_character', characters().id]">
       <img 
       src="{{characters().image}}" 
-      alt="Rick Sanchez"
+      class="card transition ease-in-out delay-100 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 overflow-auto"
       >
     </a>
-    <div class="card-body">
+    <div class="p-2">
       <h2 class="card-title">{{characters().name}}</h2>
-      <p class="card-text">
+      <p class="overflow-hidden text-ellipsis">
         <strong>Estado:</strong>{{characters().status}}<br>
         <strong>Especie:</strong>{{characters().species}}<br>
         <strong>Género:</strong>{{characters().gender}}<br>
         <strong>Origen:</strong>{{characters().origin.name}}<br>
-        <strong>Ubicación:</strong>{{characters().location.name}}
+        <strong>Ubicación:</strong>{{characters().location.name | slice : 0 : 30}}
       </p>
     </div>
   </div>
+</div>
