--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,12 +1,13 @@
  <div class="flex flex-col">
 
     <div 
-    class="bg-heroRick bg-cover bg-no-repeat bg-center bg-opacity-50 rounded-lg mx-4 mt-28 px-4 py-28 shadow-md shadow-slate-500"
-    >
+    class="bg-heroRick bg-contain bg-no-repeat bg-center bg-opacity-50 rounded-lg mx-4 mt-28 px-4 py-28 shadow-md shadow-slate-500"
+    >   <img src="" alt="">
         <h1 class="uppercase text sm:text-1 md:text-2xl lg:text-5xl text-center text-white">Rick and Morty</h1>
     </div>
     
-    <div class="max-w-sm bg-slate-100 mx-4 my-10 px-2 py-4 shadow-md hover:shadow-yellow-200">
+    <div 
+    class="max-w-sm bg-slate-100 mx-4 my-10 px-2 py-4 shadow-md hover:shadow-yellow-200">
         <img 
         src="assets/img/Rick_and_Morty.svg" 
         alt="" 
